# vortix

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  PRODUCT_HUNT.md  README.md  ROADMAP.md  SECURITY.md  deny.toml  dist-workspace.toml  flake.nix  release-plz.toml
.cargo/: config.toml
.github/workflows/: boundary.yml  ci.yml  dependabot-auto-merge.yml  install-sanity.yml  integration-tests.yml  lint.yml  nix.yml  release-plz.yml  release.yml  security.yml  test.yml
crates/vortix/: CHANGELOG.md  Cargo.toml
crates/vortix-config/: Cargo.toml
crates/vortix-config/src/: error.rs  lib.rs  migration.rs  profile_store.rs
crates/vortix-core/: Cargo.toml
crates/vortix-core/src/: lib.rs  profile.rs
crates/vortix-core/src/engine/: error.rs  event.rs  fsm.rs  handle.rs  input.rs  state.rs
crates/vortix-core/src/ipc/: mod.rs
crates/vortix-core/src/journal/: mod.rs  retention.rs  writer.rs
crates/vortix-core/src/ports/: killswitch.rs  tunnel.rs
crates/vortix-core/src/ports/tunnel/: mock.rs
crates/vortix-platform-linux/: Cargo.toml
crates/vortix-platform-macos/: Cargo.toml
crates/vortix-platform-macos/src/: dns.rs  firewall.rs  interface.rs  network_stats.rs  route_table.rs  socket_audit.rs
crates/vortix-platform-windows/: Cargo.toml
crates/vortix-platform-windows/src/: dns.rs  firewall.rs  interface.rs  network_stats.rs  route_table.rs  socket_audit.rs
crates/vortix-process/: Cargo.toml
crates/vortix-process/src/: lib.rs  mock.rs  orphan_scan.rs  real.rs
crates/vortix-protocol-openvpn/: Cargo.toml
crates/vortix-protocol-wireguard/: Cargo.toml
crates/vortix/src/: config.rs  constants.rs  lib.rs  main.rs  message.rs  tunnel.rs  utils.rs
crates/vortix/src/app/: connection.rs  helpers.rs  input.rs  mod.rs  profile.rs  telemetry_poll.rs  tests.rs  update.rs
crates/vortix/src/cli/: args.rs  commands.rs  output.rs  report.rs
crates/vortix/src/core/: dns_leak.rs  downloader.rs  icmp.rs  killswitch.rs  mod.rs  network_monitor.rs  real_ip_cache.rs  scanner.rs  telemetry.rs  telemetry_http.rs
crates/vortix/src/daemon/: client.rs  mod.rs  server.rs
crates/vortix/src/engine/: connection.rs  mod.rs
crates/vortix/src/platform/: aggregate.rs  mod.rs
crates/vortix/src/platform/linux/: mod.rs
crates/vortix/src/platform/macos/: mod.rs
crates/vortix/src/state/: killswitch.rs  mod.rs  retry.rs  ui.rs
crates/vortix/src/ui/: helpers.rs  mod.rs  sigils.rs
crates/vortix/src/ui/dashboard/: chart.rs  connection_details.rs  header.rs  mod.rs  security.rs  sidebar.rs
crates/vortix/src/ui/overlays/: auth.rs  config_viewer.rs  help.rs
crates/vortix/src/ui/widgets/: footer.rs
crates/vortix/src/vortix_config/: error.rs  migration.rs  mod.rs  profile_store.rs  secret_store.rs  settings.rs
crates/vortix/src/vortix_core/: cidr.rs  cidr_subtract.rs  mod.rs  secret_file.rs
crates/vortix/src/vortix_core/engine/: error.rs  event.rs  fsm.rs  handle.rs  input.rs  mod.rs  registry.rs  state.rs
crates/vortix/src/vortix_core/ipc/: frame.rs  mod.rs
crates/vortix/src/vortix_core/journal/: mod.rs  writer.rs
crates/vortix/src/vortix_core/ports/: dns.rs  interface.rs  killswitch.rs  mod.rs  network_stats.rs  process.rs  route_table.rs  socket_audit.rs  tunnel.rs
crates/vortix/src/vortix_core/ports/tunnel/: mock.rs
crates/vortix/src/vortix_core/state/: killswitch.rs  mod.rs
crates/vortix/src/vortix_platform_linux/: dns.rs  firewall.rs  interface.rs  interface_list.rs  mod.rs  network_stats.rs  route_table.rs  socket_audit.rs
crates/vortix/src/vortix_platform_macos/: dns.rs  firewall.rs  interface.rs  interface_list.rs  libproc_ffi.rs  mod.rs  network_stats.rs  route_table.rs  socket_audit.rs
crates/vortix/src/vortix_platform_windows/: dns.rs  firewall.rs  interface.rs  interface_list.rs  mod.rs  network_stats.rs  route_table.rs  socket_audit.rs
crates/vortix/src/vortix_process/: mock.rs  mod.rs  real.rs
crates/vortix/src/vortix_protocol_openvpn/: mod.rs  parser.rs  tunnel.rs
crates/vortix/src/vortix_protocol_wireguard/: parser.rs  tunnel.rs
crates/vortix/src/vpn_runtime/: connection.rs  connection_state.rs  mod.rs  openvpn.rs
crates/vortix/tests/: cli_integration.rs  cold_start.rs  integration.rs  json_v2_envelope.rs  telemetry_behavior_parity.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: MIGRATION.md  RELEASE-PLAYBOOK-v0.3.0.md  architecture-migration-v1.md  ci-parity.md  multi-tunnel-fwmark.md  roles.md  v0.3.0-FAQ.md  v0.3.0-RELEASE-NOTES.md
docs/brainstorms/: 2026-05-24-architectural-completion-requirements.md  2026-05-24-capability-ports-platform-requirements.md  2026-05-24-cargo-workspace-split-requirements.md  2026-05-24-cli-surface-cleanup-requirements.md  2026-05-24-commandrunner-port-requirements.md  2026-05-24-config-profile-secret-stack-requirements.md  2026-05-24-daemon-engine-handle-requirements.md  2026-05-24-engine-fsm-event-journal-requirements.md  2026-05-24-tunnel-trait-enum-dispatch-requirements.md  2026-05-28-multi-connection-requirements.md  2026-05-29-ci-workflow-reduction-requirements.md  2026-05-29-test-automation-requirements.md  2026-05-30-security-guard-panel-polish-requirements.md  2026-05-30-system-dependency-reduction-requirements.md  2026-06-01-multi-tunnel-state-authority-requirements.md  2026-06-02-openvpn-interactive-auth-requirements.md  2026-06-03-systemd-resolved-dns-integration-requirements.md
docs/ideation/: 2026-05-24-vortix-architecture-ideation.md
docs/manual-testing/: README.md  backlog.md  multi-connection.md
docs/plans/: 2026-05-24-001-refactor-cargo-workspace-split-plan.md  2026-05-24-002-feat-commandrunner-port-plan.md  2026-05-24-003-refactor-capability-ports-platform-plan.md  2026-05-24-004-refactor-tunnel-trait-enum-dispatch-plan.md  2026-05-24-009-feat-lifecycle-hooks-plan.md  (+20 more)
examples/: README.md
node-vortix/: README.md  package-lock.json  package.json
scripts/: investigate-tui-hang.sh  smoke-v0.3.0.sh  test-infra.sh
src/: logger.rs
tapes/: demo.tape  leak-detection.tape  multi-connection.tape  openvpn-totp.tape  profile-management.tape  split-tunnel.tape
(+45 files in other folders)
