[workspace]
resolver = "2"
members = ["crates/vortix", "crates/xtask"]
default-members = ["crates/vortix"]

[workspace.package]
version = "0.4.1"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/Harry-kp/vortix"
authors = ["Harry KP <harrykp@users.noreply.github.com>"]

[workspace.dependencies]
# TUI Framework
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = "0.29"

# Date/time formatting (local-offset needed for OffsetDateTime::now_local)
# Upper bound excludes time 0.3.48 (published 2026-06-12) which ships
# a fresh E0119 trait-conflict that breaks `cargo install vortix` for
# anyone without `--locked`. Drop the cap once upstream releases a
# clean 0.3.49+ — until then, pinning here keeps the canonical install
# command working for end users on crates.io.
time = { version = ">=0.3, <0.3.48", features = ["local-offset", "formatting", "macros"] }

# Error Handling
color-eyre = "0.6"
thiserror = "2"

# CLI Argument Parsing
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Serialization (for state persistence and API parsing)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
toml = "1.1"
dirs = "6"
directories = "6"
figment = { version = "0.10", features = ["toml", "env"] }

# Async runtime + tracing (CommandRunner per docs/plans/2026-05-24-002)
tokio = { version = "1", features = ["rt-multi-thread", "process", "time", "macros", "sync", "io-util", "fs", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
enum_dispatch = "0.3"

# Unicode display-width (for footer hint budgeting with multi-byte glyphs)
unicode-width = "0.2"

# Bug report (browser opening + URL encoding)
open = "5"
urlencoding = "2"

# Test fixtures
tempfile = "3.27"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
