[package]
name = "vortix-config"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
figment = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }

# Profile / secret stack — wired in U2/U3.
vortix-core = { path = "../vortix-core" }

# Secret store deps (plan 006 U3): keyring-first with encrypted-file fallback.
keyring = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
zeroize = { workspace = true }
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
