[package]
name = "vortix-platform-windows"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
vortix-core = { path = "../vortix-core" }
vortix-process = { path = "../vortix-process" }
tracing = { workspace = true }

[lints]
workspace = true
