[package]
name = "vortix"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Terminal UI for WireGuard and OpenVPN with real-time telemetry and leak guarding"
keywords = ["vpn", "tui", "wireguard", "openvpn", "terminal"]
categories = ["command-line-utilities", "network-programming"]
homepage = "https://docs.rs/vortix"
documentation = "https://docs.rs/vortix"
readme = "../../README.md"
exclude = [
    "../../assets/*",
    "../../.github/*",
    "../../target/*",
    "../../scripts/*",
    "../../*.tar.gz",
    "../../cliff.toml",
    "../../deny.toml",
    "../../dist-workspace.toml",
    "../../release-plz.toml",
    "../../rustfmt.toml"
]

[[bin]]
name = "vortix"
path = "src/main.rs"

[dependencies]
# TUI Framework
ratatui = { workspace = true }
crossterm = { workspace = true }

# Date/time formatting (local-offset needed for OffsetDateTime::now_local)
time = { workspace = true }

# Error Handling
color-eyre = { workspace = true }

# CLI Argument Parsing
clap = { workspace = true }
clap_complete = { workspace = true }

# Serialization (for state persistence and API parsing)
serde = { workspace = true }
serde_json = { workspace = true }

# Configuration
toml = { workspace = true }
dirs = { workspace = true }

# Unicode display-width (for footer hint budgeting with multi-byte glyphs)
unicode-width = { workspace = true }

# Bug report (browser opening + URL encoding)
open = { workspace = true }
urlencoding = { workspace = true }

# Dependencies from merged internal crates
base64 = "0.22"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "io-util", "time"] }
thiserror = { workspace = true }
directories = { workspace = true }
enum_dispatch = { workspace = true }
figment = { workspace = true }
keyring = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
zeroize = { workspace = true }
rand = "0.10"
sha2 = "0.11"

# System calls (for root detection + platform crates)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
